--- a/calculator.html
+++ b/calculator.html
@@ -4,7 +4,11 @@
 <script type="text/javascript">
 function cube() {
 var num = document.getElementById("n1");
-num.value = Math.pow(num.value, 3);
+num.value = Math.pow(num.value, 3);}
+
+function alacuatro() {
+var num = document.getElementById("n1");
+num.value = Math.pow(num.value, 4);
 }
 function cuadrado() {
 var num = document.getElementById("n1");
@@ -24,6 +28,7 @@ Number:
 <button onclick="cuadrado()"> x^2 </button>
 <button onclick="cube()"> x^3 </button>
 <button onclick="inverse()"> 1/x </button>
+<button onclick="alacuatro()"> x^4 </button>
 </p>
 </body>
 </html>
