--- a/calculator.html
+++ b/calculator.html
@@ -18,6 +18,10 @@ function inverse() {
 var num = document.getElementById("n1");
 num.value = Math.pow(num.value, -1);
 }
+function sin() {
+var num = document.getElementById("n1");
+num.value = Math.sin(num.value);
+}
 </script>
 </head>
 <body>
@@ -29,6 +33,7 @@ Number:
 <button onclick="cube()"> x^3 </button>
 <button onclick="inverse()"> 1/x </button>
 <button onclick="alacuatro()"> x^4 </button>
+<button onclick="sin()"> sin </button>
 </p>
 </body>
 </html>
