--- a/calculator.html
+++ b/calculator.html
@@ -6,6 +6,10 @@ function cube() {
 var num = document.getElementById("n1");
 num.value = Math.pow(num.value, 3);
 }
+function cuadrado() {
+var num = document.getElementById("n1");
+num.value = Math.pow(num.value, 2);
+}
 </script>
 </head>
 <body>
@@ -13,6 +17,7 @@ num.value = Math.pow(num.value, 3);
 Number:
 <input type="text" id="n1">
 <p>
+<button onclick="cuadrado()"> x^2 </button>
 <button onclick="cube()"> x^3 </button>
 </p>
 </body>
