--- a/calculator.html
+++ b/calculator.html
@@ -10,6 +10,10 @@ function cuadrado() {
 var num = document.getElementById("n1");
 num.value = Math.pow(num.value, 2);
 }
+function inverse() {
+var num = document.getElementById("n1");
+num.value = Math.pow(num.value, -1);
+}
 </script>
 </head>
 <body>
@@ -19,6 +23,7 @@ Number:
 <p>
 <button onclick="cuadrado()"> x^2 </button>
 <button onclick="cube()"> x^3 </button>
+<button onclick="inverse()"> 1/x </button>
 </p>
 </body>
 </html>
